Fixes in the spanish translations ..

--- a/jfreereport/source/org/jfree/report/modules/gui/base/resources/jfreereport-resources_es.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/base/resources/jfreereport-resources_es.properties
@@ -36,6 +36,8 @@ dialog.gotopage.message=Introduce un n\u00famero de p\u00e1gina
 menu.file.name=Archivo
 menu.file.mnemonic=A
 
+menu.navigation.name=Navegaci\u00f3n
+
 menu.help.name=Ayuda
 menu.help.mnemonic=Y
 
