--- a/jfreereport/ChangeLog
+++ b/jfreereport/ChangeLog
@@ -3,10 +3,13 @@
 ---------------
 A list of changes in recent versions:
 0.8.5-5: (1-May-2005)
+        * [BUG] The include parser did not setup the EntityResolver correctly.
+          This caused trouble when working without an internet connection.
+
         * [BUG] The Excel cell style provider created too many styles due
           to an invalid key used for checking whether a style already exists.
 
-        * [BUG] Dicovered and fixed some bugs using the 'FindBugs' tool.
+        * [BUG] Discovered and fixed some bugs using the 'FindBugs' tool.
 
         * [BUG] Fixed an error condition, where an non-absolute path could cause
           a NullPointer if the parent directory could not be resolved.
