--- a/jfreereport-ext/ChangeLog
+++ b/jfreereport-ext/ChangeLog
@@ -1,3 +1,6 @@
+0.8.5-5: (04-Mar-2005)
+  * New Chart-Demo shows how to print multiple charts in a single report.
+
 0.8.5: (04-Mar-2005)
   * Experimental barcode classes.
 
