CZ translation updates from lvanek.

--- a/jfreereport/source/org/jfree/report/modules/gui/html/resources/html-export-resources_cs_CZ.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/html/resources/html-export-resources_cs_CZ.properties
@@ -1,23 +1,23 @@
-action.export-to-html.description=Ulo\u009eit HTML souboru
+action.export-to-html.description=Ulo\u017eit HTML souboru
 action.export-to-html.name=Exportovat do HTML...
 
-error.processingfailed.message=Chyba p\u00f8i zpracov\u00e1v\u00e1n\u00ed t\u00e9to sestavy\: {0}
+error.processingfailed.message=Chyba p\u0159i zpracov\u00e1v\u00e1n\u00ed t\u00e9to sestavy\: {0}
 error.processingfailed.title=Zpracov\u00e1n\u00ed sady selhalo
-error.savefailed.message=Chyba p\u00f8i ukl\u00e1d\u00e1n\u00ed souboru\: {0}
-error.savefailed.title=Chyba p\u00f8i ukl\u00e1d\u00e1n\u00ed
-error.validationfailed.message=Chyba p\u00f8i validaci u\u009eivatelsk\u00e9ho vstupu.
-error.validationfailed.title=Chyba p\u00f8i validaci
+error.savefailed.message=Chyba p\u0159i ukl\u00e1d\u00e1n\u00ed souboru\: {0}
+error.savefailed.title=Chyba p\u0159i ukl\u00e1d\u00e1n\u00ed
+error.validationfailed.message=Chyba p\u0159i validaci u\u017eivatelsk\u00e9ho vstupu.
+error.validationfailed.title=Chyba p\u0159i validaci
 
 html-export.progressdialog.message=Nyn\u00ed je sestava exportov\u00e1na do HTML souboru ...
 html-export.progressdialog.title=Exportuji do HTML form\u00e1tu ...
 
 htmlexportdialog.author=Autor
-htmlexportdialog.cancel=Zru\u009ait
+htmlexportdialog.cancel=Zru\u0161it
 htmlexportdialog.confirm=Potvrdit
 htmlexportdialog.copy-external-references=Kop\u00edrovat extern\u00ed soubor
-htmlexportdialog.datafilename=Datov\u00e1 slo\u009eka
+htmlexportdialog.datafilename=Datov\u00e1 slo\u017eka
 htmlexportdialog.dialogtitle=Exportovat sestavu do HTML souboru ...
-htmlexportdialog.directory-export=Export do slo\u009eky
+htmlexportdialog.directory-export=Export do slo\u017eky
 htmlexportdialog.encoding=K\u00f3dov\u00e1n\u00ed
 htmlexportdialog.errorTitle=Chyba
 htmlexportdialog.filename=Jm\u00e9no souboru
@@ -28,18 +28,18 @@ htmlexportdialog.selectDirFile=Vyberte soubor
 htmlexportdialog.selectStreamFile=Vyberte soubor
 htmlexportdialog.selectZipFile=Vyberte soubor
 htmlexportdialog.stream-export=Export do souboru
-htmlexportdialog.strict-layout=P\u00f8i exportu striktn\u00ec dodr\u009eet rozlo\u009een\u00ed tabulky.
-htmlexportdialog.targetCreateDataDirConfirmation=Specifikovan\u00e1 datov\u00e1 slo\u009eka neexistuje.\nM\u00e1m chyb\u00ecj\u00edc\u00ed podadres\u00e1\u00f8e vytvo\u00f8it?
-htmlexportdialog.targetCreateDataDirTitle=Vytvo\u00f8it slo\u009eku?
-htmlexportdialog.targetDataDirIsNoDirectory=Specifikovan\u00e1 datov\u00e1 slo\u009eka je chybn\u00e1.
+htmlexportdialog.strict-layout=P\u0159i exportu striktn\u011b dodr\u017eet rozlo\u017een\u00ed tabulky.
+htmlexportdialog.targetCreateDataDirConfirmation=Specifikovan\u00e1 datov\u00e1 slo\u017eka neexistuje.\nM\u00e1m chyb\u011bj\u00edc\u00ed podadres\u00e1\u0159e vytvo\u0159it?
+htmlexportdialog.targetCreateDataDirTitle=Vytvo\u0159it slo\u017eku?
+htmlexportdialog.targetDataDirIsNoDirectory=Specifikovan\u00e1 datov\u00e1 slo\u017eka je chybn\u00e1.
 htmlexportdialog.targetIsEmpty=Specifikujte n\u00e1zev pro HTML soubor, pros\u00edm.
 htmlexportdialog.targetIsNoFile=Vybran\u00fd c\u00edl nen\u00ed soubor.
-htmlexportdialog.targetIsNotWritable=Vybran\u00fd soubor je chr\u00e1n\u00ecn proti z\u00e1pisu.
-htmlexportdialog.targetOverwriteConfirmation=Soubor ''{0}'' existuje. P\u00f8epsat?
-htmlexportdialog.targetOverwriteTitle=P\u00f8epsat soubor?
-htmlexportdialog.targetPathIsAbsolute=Vybran\u00e1 cesta k c\u00edli je absolutn\u00ed adres\u00e1\u00f8.\nZadejte datovou slo\u009eku v ZIP souboru, pros\u00edm.
+htmlexportdialog.targetIsNotWritable=Vybran\u00fd soubor je chr\u00e1n\u011bn proti z\u00e1pisu.
+htmlexportdialog.targetOverwriteConfirmation=Soubor ''{0}'' existuje. P\u0159epsat?
+htmlexportdialog.targetOverwriteTitle=P\u0159epsat soubor?
+htmlexportdialog.targetPathIsAbsolute=Vybran\u00e1 cesta k c\u00edli je absolutn\u00ed adres\u00e1\u0159.\nZadejte datovou slo\u017eku v ZIP souboru, pros\u00edm.
 htmlexportdialog.title=N\u00e1zev
 htmlexportdialog.warningTitle=Varov\u00e1n\u00ed
 htmlexportdialog.zip-archives=ZIP archivy
 htmlexportdialog.zip-export=Export do ZIP souboru
-htmlexportdialog.targetExistsWarning=Soubor ''{0}'' existuje. P\u00f8epsat?
+htmlexportdialog.targetExistsWarning=Soubor ''{0}'' existuje. P\u0159epsat?
