--- a/jfreereport/source/org/jfree/report/modules/gui/plaintext/resources/plaintext-export-resources_cs_CZ.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/plaintext/resources/plaintext-export-resources_cs_CZ.properties
@@ -1,13 +1,13 @@
-action.export-to-plaintext.description=Ulo\u009eit do textov\u00e9ho souboru
-action.export-to-plaintext.name=Ulo\u009eit jako textov\u00fd soubor...
+action.export-to-plaintext.description=Ulo\u017eit do textov\u00e9ho souboru
+action.export-to-plaintext.name=Ulo\u017eit jako textov\u00fd soubor...
 
-error.processingfailed.message=Chyba p\u00f8i zpracov\u00e1n\u00ed t\u00e9to sestavy\: {0}
+error.processingfailed.message=Chyba p\u0159i zpracov\u00e1n\u00ed t\u00e9to sestavy\: {0}
 error.processingfailed.title=Zpracov\u00e1n\u00ed sestavy selhalo
 
-error.savefailed.message=Chyba p\u00f8i ukl\u00e1d\u00e1n\u00ed souboru\: {0}
-error.savefailed.title=Chyba p\u00f8i ukl\u00e1d\u00e1n\u00ed
+error.savefailed.message=Chyba p\u0159i ukl\u00e1d\u00e1n\u00ed souboru\: {0}
+error.savefailed.title=Chyba p\u0159i ukl\u00e1d\u00e1n\u00ed
 
-plain-text-exportdialog.cancel=Zru\u009ait
+plain-text-exportdialog.cancel=Zru\u0161it
 plain-text-exportdialog.chars-per-inch=cpi (znaky na palec)
 plain-text-exportdialog.confirm=Potvrdit
 plain-text-exportdialog.dialogtitle=Exportovat sestavu do textov\u00e9ho souboru ...
@@ -15,19 +15,19 @@ plain-text-exportdialog.encoding=K\u00f3dov\u00e1n\u00ed
 plain-text-exportdialog.errorTitle=Chyba
 plain-text-exportdialog.filename=Jm\u00e9no souboru
 plain-text-exportdialog.font-settings=Nastaven\u00ed p\u00edsma
-plain-text-exportdialog.lines-per-inch=lpi (\u00f8\u00e1dky na palec)
+plain-text-exportdialog.lines-per-inch=lpi (\u0159\u00e1dky na palec)
 plain-text-exportdialog.printer=Typ tisk\u00e1rny
 plain-text-exportdialog.printer.epson=Kompatibiln\u00ed s Epson ESC/P
-plain-text-exportdialog.printer.ibm=Kompatibilni s IBM
+plain-text-exportdialog.printer.ibm=Kompatibiln\u00ed s IBM
 plain-text-exportdialog.printer.plain=V\u00fdstup do textov\u00e9ho souboru
 plain-text-exportdialog.selectFile=Vyberte soubor
 plain-text-exportdialog.targetIsEmpty=Pros\u00edm specifikujte n\u00e1zev pro CSV soubor.
 plain-text-exportdialog.targetIsNoFile=Vybran\u00fd c\u00edl nen\u00ed soubor.
-plain-text-exportdialog.targetIsNotWritable=Vybran\u00fd soubor je chr\u00e1n\u00ecn proti z\u00e1pisu.
-plain-text-exportdialog.targetOverwriteConfirmation=Soubor ''{0}'' existuje. P\u00f8epsat?
-plain-text-exportdialog.targetOverwriteTitle=P\u00f8epsat soubor?
+plain-text-exportdialog.targetIsNotWritable=Vybran\u00fd soubor je chr\u00e1n\u011bn proti z\u00e1pisu.
+plain-text-exportdialog.targetOverwriteConfirmation=Soubor ''{0}'' existuje. P\u0159epsat?
+plain-text-exportdialog.targetOverwriteTitle=P\u0159epsat soubor?
 plain-text-exportdialog.warningTitle=Varov\u00e1n\u00ed
 
 plaintext-export.progressdialog.message=Sestava je exportov\u00e1na do textov\u00e9ho souboru ...
 plaintext-export.progressdialog.title=Exportovat do textov\u00e9ho souboru ...
-plain-text-exportdialog.targetOverwriteWarning=Soubor ''{0}'' existuje. P\u00f8epsat?
+plain-text-exportdialog.targetOverwriteWarning=Soubor ''{0}'' existuje. P\u0159epsat?
