--- a/jfreereport/source/org/jfree/report/modules/gui/print/resources/print-export-resources_cs_CZ.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/print/resources/print-export-resources_cs_CZ.properties
@@ -4,8 +4,8 @@ action.page-setup.name=Nastaven\u00ed str\u00e1nky
 action.print.description=Vytisknout sestavu
 action.print.name=Tisk...
 
-error.printfailed.message=Chyba p\u00f8i tisku sestavy\: {0}
-error.printfailed.title=Chyba p\u00f8i tisku
+error.printfailed.message=Chyba p\u0159i tisku sestavy\: {0}
+error.printfailed.title=Chyba p\u0159i tisku
 
-printing-export.progressdialog.message=Nyni se bude sestava tisknout ...
+printing-export.progressdialog.message=Nyn\u00ed se bude sestava tisknout ...
 printing-export.progressdialog.title=Tisk sestavy ...
