CZ translation fix from lvanek.

--- a/jfreereport/source/org/jfree/report/modules/gui/base/resources/jfreereport-resources_cs_CZ.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/base/resources/jfreereport-resources_cs_CZ.properties
@@ -1,117 +1,117 @@
 action.about.description=Informace o aplikaci
 action.about.name=O aplikaci...
 
-action.back.description=Pøepnout na pøedchozí stránku
-action.back.name=Zpìt
+action.back.description=P\u0159epnout na p\u0159edchoz\u00ed str\u00e1nku
+action.back.name=Zp\u011bt
 
-action.close.description=Zavøít okno s náhledem
-action.close.name=Zavøít
+action.close.description=Zav\u0159\u00edt okno s n\u00e1hledem
+action.close.name=Zav\u0159\u00edt
 
-action.firstpage.description=Pøepnout na první stránku
-action.firstpage.name=Domù
+action.firstpage.description=P\u0159epnout na prvn\u00ed str\u00e1nku
+action.firstpage.name=Dom\u016f
 
-action.forward.description=Pøepnout na následující stránku
-action.forward.name=Vpøed
+action.forward.description=P\u0159epnout na n\u00e1sleduj\u00edc\u00ed str\u00e1nku
+action.forward.name=Vp\u0159ed
 
-action.gotopage.description=Zobrazit stránku pøímo
-action.gotopage.name=Jít na stránku ...
+action.gotopage.description=Zobrazit str\u00e1nku p\u0159\u00edmo
+action.gotopage.name=J\u00edt na str\u00e1nku ...
 
-action.lastpage.description=Pøepnout na poslední stránku
+action.lastpage.description=P\u0159epnout na posledn\u00ed str\u00e1nku
 action.lastpage.name=Konec
 
-action.zoomIn.description=Zvìtšit pøiblížení
-action.zoomIn.name=Zvìtšit
+action.zoomIn.description=Zv\u011bt\u0161it p\u0159ibl\u00ed\u017een\u00ed
+action.zoomIn.name=Zv\u011bt\u0161it
 
-action.zoomOut.description=Zmenšit pøiblížení
-action.zoomOut.name=Zmenšit
+action.zoomOut.description=Zmen\u0161it p\u0159ibl\u00ed\u017een\u00ed
+action.zoomOut.name=Zmen\u0161it
 
-dialog.gotopage.message=Vložte èíslo stránky
-dialog.gotopage.title=Jít na stránku
+dialog.gotopage.message=Vlo\u017ete \u010d\u00edslo str\u00e1nky
+dialog.gotopage.title=J\u00edt na str\u00e1nku
 
 menu.file.name=Soubor
-menu.help.name=Nápovìda
+menu.help.name=N\u00e1pov\u011bda
 menu.navigation.name=Navigace
 menu.zoom.name=Lupa
 
-preview-frame.title=Vytisknout náhled
-progress-dialog.page-label=Stránka\: {0}
-progress-dialog.pass-label=Prošlo\: {0} - Poèítam funkèní hodnoty ...
-progress-dialog.perform-output=Provádím požadovaný výstup ...
-progress-dialog.prepare-layout=Pøipravuji rozložení k výstupu.
-progress-dialog.rows-label=\u00d8ádka\: {0} / {1}
+preview-frame.title=Vytisknout n\u00e1hled
+progress-dialog.page-label=Str\u00e1nka\: {0}
+progress-dialog.pass-label=Pro\u0161lo\: {0} - Po\u010d\u00edtam funk\u010dn\u00ed hodnoty ...
+progress-dialog.perform-output=Prov\u00e1d\u00edm po\u017eadovan\u00fd v\u00fdstup ...
+progress-dialog.prepare-layout=P\u0159ipravuji rozlo\u017een\u00ed k v\u00fdstupu.
+progress-dialog.rows-label=\u0158\u00e1dek\: {0} / {1}
 
-statusline.error=Generování sestavy zpùsobilo chybu\: {0}
-statusline.pages=Stránka {0} z {1}
-statusline.repaginate=Poèítám lámání stránek, poèkejte prosím.
+statusline.error=Generov\u00e1n\u00ed sestavy zp\u016fsobilo chybu\: {0}
+statusline.pages=Str\u00e1nka {0} z {1}
+statusline.repaginate=Po\u010d\u00edt\u00e1m l\u00e1m\u00e1n\u00ed str\u00e1nek, po\u010dkejte pros\u00edm.
 
 AbstractButton.clickText=klik
 
-AbstractDocument.additionText=pøidání
-AbstractDocument.deletionText=mazání
-AbstractDocument.redoText=Vpøed
-AbstractDocument.styleChangeText=zmìna stylu
-AbstractDocument.undoText=Zpìt
+AbstractDocument.additionText=p\u0159id\u00e1n\u00ed
+AbstractDocument.deletionText=maz\u00e1n\u00ed
+AbstractDocument.redoText=Vp\u0159ed
+AbstractDocument.styleChangeText=zm\u011bna stylu
+AbstractDocument.undoText=Zp\u011bt
 
-AbstractUndoableEdit.redoText=Vpøed
-AbstractUndoableEdit.undoText=Zpìt
+AbstractUndoableEdit.redoText=Vp\u0159ed
+AbstractUndoableEdit.undoText=Zp\u011bt
 
-ColorChooser.cancelText=Zrušit
-ColorChooser.previewText=Náhled
+ColorChooser.cancelText=Zru\u0161it
+ColorChooser.previewText=N\u00e1hled
 ColorChooser.resetText=Obnovit
-ColorChooser.rgbBlueText=Modrá
-ColorChooser.rgbGreenText=Zelená
-ColorChooser.rgbRedText=èervená
-ColorChooser.sampleText=Ukázkovy text   Ukázkový text
-ColorChooser.swatchesNameText=Vzorníky
-ColorChooser.swatchesRecentText=Posledná\:
+ColorChooser.rgbBlueText=Modr\u00e1
+ColorChooser.rgbGreenText=Zelen\u00e1
+ColorChooser.rgbRedText=\u010derven\u00e1
+ColorChooser.sampleText=Uk\u00e1zkovy text   Uk\u00e1zkov\u00fd text
+ColorChooser.swatchesNameText=Vzorn\u00edky
+ColorChooser.swatchesRecentText=Posledn\u00ed\:
 
-FileChooser.acceptAllFileFilterText=Všechny soubory (*.*)
-FileChooser.cancelButtonText=Zrušit
-FileChooser.cancelButtonToolTipText=Zrušit dialog výbìru souboru
+FileChooser.acceptAllFileFilterText=V\u0161echny soubory (*.*)
+FileChooser.cancelButtonText=Zru\u0161it
+FileChooser.cancelButtonToolTipText=Zru\u0161it dialog v\u00fdb\u011bru souboru
 FileChooser.detailsViewButtonAccessibleName=Detaily
 FileChooser.detailsViewButtonToolTipText=Detaily
-FileChooser.directoryDescriptionText=Složka
+FileChooser.directoryDescriptionText=Slo\u017eka
 FileChooser.fileDescriptionText=Soubor
-FileChooser.fileNameLabelText=Název souboru\:
+FileChooser.fileNameLabelText=N\u00e1zev souboru\:
 FileChooser.filesOfTypeLabelText=Soubory typu\:
-FileChooser.helpButtonText=Nápovìda
-FileChooser.helpButtonToolTipText=Nápovìda pro výbìr souboru
-FileChooser.homeFolderAccessibleName=Domù
-FileChooser.homeFolderToolTipText=Domù
+FileChooser.helpButtonText=N\u00e1pov\u011bda
+FileChooser.helpButtonToolTipText=N\u00e1pov\u011bda pro v\u00fdb\u011br souboru
+FileChooser.homeFolderAccessibleName=Dom\u016f
+FileChooser.homeFolderToolTipText=Dom\u016f
 FileChooser.listViewButtonAccessibleName=Seznam
 FileChooser.listViewButtonToolTipText=Seznam
-FileChooser.lookInLabelText=Podívat se do\:
-FileChooser.newFolderAccessibleName=Nová složka
-FileChooser.newFolderErrorText=Chyba pøi zakládání složky
-FileChooser.newFolderToolTipText=Vytvoøit novou složku
-FileChooser.openButtonText=Otevøít
-FileChooser.openButtonToolTipText=Otevøít vybraný soubor
-FileChooser.openDialogTitleText=Otevøít
-FileChooser.other.newFolder=Nová složka
-FileChooser.other.newFolder.subsequent=Nová složka. {0}
-FileChooser.saveButtonText=Uložit
-FileChooser.saveButtonToolTipText=Uložit vybraný soubor
-FileChooser.saveDialogTitleText=Uložit
-FileChooser.upFolderAccessibleName=Výš
-FileChooser.upFolderToolTipText=O úrove\u0148 výš
+FileChooser.lookInLabelText=Pod\u00edvat se do\:
+FileChooser.newFolderAccessibleName=Nov\u00e1 slo\u017eka
+FileChooser.newFolderErrorText=Chyba p\u0159i zakl\u00e1d\u00e1n\u00ed slo\u017eky
+FileChooser.newFolderToolTipText=Vytvo\u0159it novou slo\u017eku
+FileChooser.openButtonText=Otev\u0159\u00edt
+FileChooser.openButtonToolTipText=Otev\u0159\u00edt vybran\u00fd soubor
+FileChooser.openDialogTitleText=Otev\u0159\u00edt
+FileChooser.other.newFolder=Nov\u00e1 slo\u017eka
+FileChooser.other.newFolder.subsequent=Nov\u00e1 slo\u017eka. {0}
+FileChooser.saveButtonText=Ulo\u017eit
+FileChooser.saveButtonToolTipText=Ulo\u017eit vybran\u00fd soubor
+FileChooser.saveDialogTitleText=Ulo\u017eit
+FileChooser.upFolderAccessibleName=V\u00fd\u0161
+FileChooser.upFolderToolTipText=O \u00farove\u0148 v\u00fd\u0161
 FileChooser.updateButtonText=Aktualizovat
-FileChooser.updateButtonToolTipText=Aktualizovat výpis složky
-FileChooser.win32.newFolder=Nová složka
-FileChooser.win32.newFolder.subsequent=Nová složka. ({0})
+FileChooser.updateButtonToolTipText=Aktualizovat v\u00fdpis slo\u017eky
+FileChooser.win32.newFolder=Nov\u00e1 slo\u017eka
+FileChooser.win32.newFolder.subsequent=Nov\u00e1 slo\u017eka. ({0})
 
 FormView.resetButtonText=Obnovit
 FormView.submitButtonText=Potvrdit dotaz
 
-InternalFrameTitlePane.closeButtonAccessibleName=Zavøít
+InternalFrameTitlePane.closeButtonAccessibleName=Zav\u0159\u00edt
 InternalFrameTitlePane.iconifyButtonAccessibleName=Minimalizovat
 InternalFrameTitlePane.maximizeButtonAccessibleName=Maximalizovat
 
-OptionPane.cancelButtonText=Zrušit
+OptionPane.cancelButtonText=Zru\u0161it
 OptionPane.noButtonText=Ne
-OptionPane.titleText=Vyberte možnost
+OptionPane.titleText=Vyberte mo\u017enost
 OptionPane.yesButtonText=Ano
 
 ProgressMonitor.progressText=Postup...
 
-SplitPane.leftButtonText=levé tlaèítko
-SplitPane.rightButtonText=pravé tlaèítko
+SplitPane.leftButtonText=lev\u00e9 tla\u010d\u00edtko
+SplitPane.rightButtonText=prav\u00e9 tla\u010d\u00edtko
