Some more javadocs

--- a/jfreereport/ChangeLog
+++ b/jfreereport/ChangeLog
@@ -2,6 +2,10 @@
 5.  WHAT's NEW
 ---------------
 A list of changes in recent versions:
+        * [BUG] Changed the API of StaticImageElementFactory to fix some unclean
+          method names. Also added a convinience property of type 'java.awt.Image'
+          to the class.  
+
 0.8.5-5: (1-Jun-2005)
         * [BUG] The ItemHideFunction did not reset the visible state to visible
           after a pagebreak.
