--- a/jfreereport/TODO.txt
+++ b/jfreereport/TODO.txt
@@ -1,23 +1,37 @@
-Label printing (as seen in the card-demo)
 
-0.8.5:
-  * Implement function sets (see #note-1030630)
-! * pluggable input support (WMF, SVG etc)
-+ * Multi-Page definition, 1 pageformat for all pages
-    multiple pages (x and y),
-    a defined max width and max height (may be less than the given log page size)
-    a global page header/footer for the complete log page
-    several private page header/footers for every physical page
-+ * Implement JFreeChart adapter and Barcode stuff
-  * Formated Text support for printing (RTF, HTML)
-  * Allow access to the last datarow to make reporting results available outside.
-  * Simple parser writer and comment handler ...
+Pending:
+  * Implement JFreeChart adapter and Barcode stuff
+  * Generic/On-The-Fly reports
+  * Out-of-the-box Label printing (as seen in the card-demo)
+
+LibLayout dependent features:
+  * Formated Text support for printing (RTF, HTML or other jx.swing.doc)
   * Expand Tab-Stops
-  
-0.8.6:
   * Columns
   * PageBreaks within a band
   * Sub-Reporting
+  * Better Support for international Fonts
+    - parse TTF-Files for supported Charsets/Unicode-Ranges
+    - automaticly adjust encoding if nessesary
+  * Keep-Together of groups and bands
+  * LTR and RTL text, vertical text
+  
+  ( Multithreading )
+  ( Simplify the datasource to a sequential object with reset )
+  ( Refactor the output processing out of report state sequence
+    into the parent handler )	
+  ( Remove cloning and simplify function processing )
+  ( No more page functions, if possible )
+
+Optional:
+  * Simple parser writer and comment handler ...
+  * Allow access to the last datarow to make reporting results available outside.
+    (Introduce a 'ReportResult' class?)
+  * export to OpenOffice
+  * PDF: Fast Web View, PDF 1.2
+  * Rotated Text elements (Non-Dynamic/Drawable?)
+  
+Obsolete: (Solved by LibLayout capabilities)
   * Smarter PageLayouting:
     - FlowLayouter, LayoutAgents
     - ContentDistribution over multiple physical pages
@@ -25,12 +39,8 @@ Label printing (as seen in the card-demo)
     - FlowLayout
     - BoxLayout
     - GridBagLayout
-  * Better Support for international Fonts in the PDF-Target
-    - parse TTF-Files for supported Charsets/Unicode-Ranges
-    - automaticly adjust encoding if nessesary
-  * export to OpenOffice
-  * PDF: Fast Web View, PDF 1.2
-  * BSF instead of BeanShell
+? * Implement function sets (see #note-1030630) (May not be needed)
+  * PreviewBase update (get rid of the Image in the PreviewFrame)
 
 general:
   * Start a poll what functions are needed ...
@@ -42,22 +52,9 @@ general:
 
 -----------------------------------------------------------------------------
 To be implemented before the release is ready:
-* Redesign the dialogs to follow the common usability guides                     (3 days)
-* Verify the PlainText-Output target       (2 days)
-* Update the ANT script to reflect the new modules.
-* The report writer is not producing legal results. 
-
-What will be impossible:
-* The 'keep-together' feature is not implementable with the old engine.
-* Pagebreaks within bands - this needs a fundamental change, which is breeding 
-  in the 'libLayout' subproject.
-* Subreports - once again the old engine would die while trying to solve that 
-  problem 
 
 Next minor release:
-* Add support for rotated text             (?)
-* Verify the page-spanning printing        (? > 3 days)
 
 Known bugs:
-* Non-Area shapes, which are not instances of Line2D cannot be
-  drawn right now. The clipping fails for these shapes. [Not fixable yet]
+  * Non-Area shapes, which are not instances of Line2D cannot be
+    drawn right now. The clipping fails for these shapes. [Not fixable yet]
