--- a/jfreereport/ChangeLog
+++ b/jfreereport/ChangeLog
@@ -84,6 +84,11 @@ A list of changes in recent versions:
         * Added a switch to use either the MasterSelect command or a series of
           single commands to define the font properties on Epson 9-pin printers.
 
+        * It is now possible to access the raw datasource (the TableModel) using
+          the system maintained report property 'report.datasource'. If the
+          property is marked, even expressions will be able to access the
+          datasource.
+
 0.8.5-5: (1-Jun-2005)
         * [BUG] The ItemHideFunction did not reset the visible state to visible
           after a pagebreak.
