--- a/jfreereport-ext/ChangeLog
+++ b/jfreereport-ext/ChangeLog
@@ -1,3 +1,9 @@
+0.8.6:
+  * [BUG] The ImageIO module was not initialized properly.
+
+  * The JDK 1.4 printing has been redesigned. Now the report page definition
+    properties get fully mapped into IPP-properties.
+
 0.8.5-5: (04-Mar-2005)
   * New Chart-Demo shows how to print multiple charts in a single report.
 
